# raylib-cpp

./: .cursorRules  CMakeLists.txt  imgui.ini
cmake/: SourcesAndHeaders.cmake
include/project/: bullet_physics_scene.hpp  ecs_systems.hpp  geometric_scene.hpp  gui_controls.hpp  imgui_manager.hpp  scene_manager.hpp  scene_strategy.hpp  tree_scene.hpp
src/: bullet_physics_scene.cpp  geometric_scene.cpp  gui_controls.cpp  imgui_manager.cpp  main.cpp  scene_manager.cpp  tree_scene.cpp
